--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main {
+  box-shadow: 2px 2px 3px gray;
+  margin-left: auto;
+  margin-right: auto;
+  width: 640px;
+}
+
+.div-player {
+  margin-right: auto;
+  margin-left: auto;
+  width: max-content;
+}
+
+.div-moreplayer {
+  position: absolute;
+  top: 345px;
+  /* left: 10px; */
+  width: 640px;
+  height: 150px;
+  overflow: auto;
+  white-space: nowrap;
+
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.btn {
+  border-style: none;
+  border-radius: 50%;
+  color: rgb(186, 190, 192);
+  background-color: transparent;
+}
+
+.heading {
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
